--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
@@ -13,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.37.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
